# wortschatz_app

./: LICENSE  README.md  pyproject.toml
wortschatz/: app.py  cli.py
wortschatz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
