[project]
name = "wortschatz"
version = "0.1.0"
description = "German Vocabulary Frequency Analyzer"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0.0",
    "spacy>=3.0.0",
]

[project.scripts]
wortschatz = "wortschatz.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
